[package]
name = "gcp-lb-controller-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
env_logger = "0.11.3"
k8s-openapi = { version = "0.22.0", features = ["latest", "schemars"] }
kube = { version = "0.92.0", features = ["runtime", "derive", "unstable-runtime"] }
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.61"
regex = "1.10.5"
anyhow = "1.0.86"
rand = "0.8.5"
clap = { version = "4.5.7", features = ["derive"] }
json-patch = "2.0.0"
