[package]
name = "gcp-lb-controller-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
env_logger = "0.11.3"
k8s-openapi = { version = "0.22.0", features = ["latest", "schemars"] }
kube = { version = "0.93.1", features = ["runtime", "derive", "unstable-runtime"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.61"
regex = "1.10.5"
anyhow = "1.0.86"
rand = "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
json-patch = "2.0.0"
