[package]
name = "gcp-lb-controller-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
env_logger = "0.11.6"
k8s-openapi = { version = "0.24.0", features = ["latest", "schemars"] }
kube = { version = "0.96.0", features = ["runtime", "derive", "unstable-runtime"] }
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
thiserror = "1.0.64"
regex = "1.11.0"
anyhow = "1.0.95"
rand = "0.8.5"
clap = { version = "4.5.13", features = ["derive"] }
json-patch = "3.0.1"
